--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -40,7 +40,7 @@ h6{
 	color:#ffffff  !important; 
 	margin-left: 8%  !important;  
 	margin-top:0px  !important; 
-	width:auto  !important; 
+	width:100%  !important; 
 	height:auto  !important;
 	text-align: center;
 	margin-bottom: 0;
